mainsite/css/style.css
/*
	Fonts and resets
						*/

@font-face {
	/* Fonts generated by Font Squirrel */
	font-family: 'High Pixel';
	src: url('../font/highpixel/highpixel.eot');
	src: url('../font/highpixel/highpixel.eot?#iefix') format('embedded-opentype'),
         url('../font/highpixel/highpixel.woff') format('woff'),
         url('../font/highpixel/highpixel.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	/* From OKFOCUS */
	font-family: 'Pixel Comic Sans';
	/* Erm... hahahaha */
	src: url('../font/pixelcomicsans/pixelcomicsans.eot?#iefix') format('embedded-opentype'), 
	       url('../font/pixelcomicsans/pixelcomicsans.woff') format('woff'), 
	       url('../font/pixelcomicsans/pixelcomicsans.ttf')  format('truetype'),
	       url('../font/pixelcomicsans/pixelcomicsans.svg#svgFontName') format('svg');
	font-weight: normal;
	font-style: normal;
}

.clearfix {
	clear: both;
}

* {
	margin: 0;
	padding: 0;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-tap-highlight-color: transparent;
}

body {
	overflow-x: hidden;
	background-color: #6DA46D;
	background-image: url('../img/circuit.svg');
	font-family: Helvetica, Arial, sans-serif;
}

#background-images {
	z-index: -1337;
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	margin-top: 200px;
}

header {
	position: relative;
	width: 100%;
	height: 5em;
	background: #F5F5F5;
	margin-bottom: 1em;
	box-shadow: 0 5px 0 rgba(0,0,0,.15);
	font-size: 1.75em;
}

header .title {
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	margin: auto;
	padding: 0 1em;
	width: 15.1em;
	height: 2em;
}

header .title span {
	color: #303030;
	float: left;
	text-transform: uppercase;
	font-size: .6em;
	padding: .7em 0;
	font-family: 'High Pixel';
}

header .title .logo{
	width: 8em;
	height: 100%;
	margin: 0 .5em;
	text-indent: -2345px;
	float: left;
	background: url('../img/logo.png') center no-repeat;
	background-size: 100%;
}

header .title .logo:hover {
	opacity: .8;
}

main {
	width: 70%;
	margin: 0 auto;
}

.archive,
.text-section {
	box-shadow: 0  5px 0 rgba(25, 25, 25, 0.2);
}

/* 
	event section
					*/

.top,
.content,
.previous,
.archive,
.text-section {
	border-bottom: 5px solid rgba(25, 25, 25, 0.2);
}

.top,
.previous {
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	background: rgb(41, 41, 41);
}

.top {
	padding: .75em 1em;
}

.top h1 {
	letter-spacing: .75em;
	text-transform: uppercase;
	text-align: center;
	font-size: 2.5em;
	font-family: 'High Pixel', Arial, sans-serif;
	color: #f5f5f5;
}

.content {
	overflow: hidden;
	background-color: #f5f5f5;
}

.content .row {
	overflow: hidden;
	padding: 15px 0;
	border-bottom: 2px solid rgba(25, 25, 25, 0.1);
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	font-size: 2em;
	color: rgba(0,0,0,.85);
}

.content .row:last-child {
	border: none;
}

.content .map-row {
	display: none;
	position: relative;
	padding: 0;
}

.content .map-row #map {
	height: 350px;
}

/* leaflet map overides */

.leaflet-bar {
	border: none;
}

.leaflet-bar,
.leaflet-bar-part-top,
.leaflet-bar-part-bottom,
.leaflet-popup-content-wrapper {
	border-radius: 0px;
}

.leaflet-bar,
.leaflet-control-attribution .leaflet-control,
.leaflet-control-attribution,
.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
	box-shadow: none;
}

.leaflet-bar-part-top,
.leaflet-bar-part-bottom {
	color: #414141;
}

.leaflet-popup-content {
	overflow: hidden;
	width: 150px;
}

.leaflet-container .leaflet-control-zoom {
	border: 2px solid rgba(0, 0, 0, 0.25);
	opacity: 0;
	-webkit-transition: opacity .25s;
	transition: opacity .25s;
}

.leaflet-container:hover .leaflet-control-zoom {
	opacity: 1;
}

.leaflet-container .leaflet-control-zoom a {
	color: #3D3D3D;
}

.leaflet-container .leaflet-control-attribution {
	opacity: 0;
	box-shadow: none;
	background-color: rgba(41,41,41,.75);
	color: #F5F5F5;
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	-webkit-transition: opacity .25s;
	transition: opacity .25s;
}

#map:hover .leaflet-control-attribution {
	opacity: 1;
}

.leaflet-control-attribution a {
	color: #ECEC9A;
	text-decoration: none;
}

.leaflet-popup-content a {
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	color: #414141;
	text-decoration: none;
}

.leaflet-popup-content a:hover {
	border-bottom: 2px solid;
}

.leaflet-control-zoom-fullscreen {
	background-color: rgba(255, 255, 255, 0.8);
	border-top: 1px solid #AAA;
	background-image: url(../img/icon-fullscreen.png);
}

.leaflet-control-zoom a:hover {
	background-color: #FFF;
}

.leaflet-container:-webkit-full-screen {
	width: 100% !important;
	height: 100% !important;
}

.content .row:last-child {
	border: none;
}

.content .info-what {
	padding: 1em 2em;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 1em;
	color: #474747;
	background: #E4E4E4;
}

.content .col {
	float: left;
}

.content .info-what .col {
	width: 100%;
	text-align: center;
}

.content .q {
	text-align: right;
	width: 20%;
	padding: 0 .4em;
	border-right: 2px solid rgba(25, 25, 25, 0.1);
}

.content .a {
	text-align: left;
	width: 80%;
	padding-left: 10px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	color: rgb(29, 29, 29);
}

.more-info {
	padding: 0 5px;
	text-transform: uppercase;
	font-family: 'High Pixel', Helvetica, Arial, sans-serif;
	font-size: .5em;
	display: inline-block;
	color: #222;
	text-decoration: none;
	border-bottom: 3px solid #CFC679;
	-webkit-transition: border-color .1s;
	transition: border-color .1s;
}

.more-info:hover {
	border-color: #DDD;
}

.ordinal-suffix {
	font-size: .5em;
	vertical-align: super;
}

.previous {
	color: #f5f5f5;
	height: 3.5em;
}

.previous p,
.previous .meetings {
	float: left;
	height: 100%;
}

.previous p {
	font-size: 10px;
	letter-spacing: 5px;
	width: 20%;
	text-transform: uppercase;
	font-family: 'High Pixel', Arial, sans-serif;
	padding: 1.5em 2.5em;
	overflow: hidden;
}

.previous p.more {
	display: block;
	text-align: right;
	-webkit-transition: background .1s;
	transition: background .1s;
}

		.previous p.more a{
			padding-left: 5px;
			display: inline-block;
			color: #F5F5F5;
			text-decoration: none;
			border-bottom: 2px solid #8A8585;
			transition: border-color .1s;
		}

		.previous p.more:hover a{
			border-color: #CFC679;
		}

	.previous .meetings{
		color: #F5F5F5;
		padding: 10px;
		width: 20%;
		text-align: right;
		text-decoration: none;
		border-right: 2px solid rgba(255,255,255,.05);
		font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
		transition: background .1s;
	}

.previous p.more:hover a {
	border-color: #CFC679;
}

.previous .meetings {
	padding: 10px;
	width: 20%;
	text-align: right;
	border-right: 2px solid rgba(255,255,255,.05);
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	-webkit-transition: background .1s;
	transition: background .1s;
}

.previous p.more:hover,
.previous .meetings:hover {
	background: rgba(255,255,255,.05);
	cursor: pointer;
}

.previous .meetings:last-child {
	border: none;
	padding: 0;
}

.previous .meetings h2 {
	font-size: 1em;
}

.previous .meetings h3 {
	color: rgb(175, 175, 175);
	font-size: 0.7em;
	font-weight: 500;
}

/*
	archive
			*/

.archive {
	overflow: hidden;
	padding: 1em 0;
	background: rgb(41, 41, 41);
}

.archive .meeting {
	padding: 1em 0;
	background: rgb(41, 41, 41);
}

.archive .meeting:nth-child(odd) {
	background: #242424;
	border-top: 5px dashed #292929;
	border-bottom: 5px dashed #292929;
}

.archive .event-name {
	padding: 0 10px;
	text-align: right;
	width: 20%;
	float: left;
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	border-right: 2px solid rgba(255, 255, 255, 0.05);
}

.archive .event-name h1 {
	color: #F5F5F5;
	font-size: 1em;
}

.archive .event-name h2 {
	color: rgb(175,175,175);
	font-size: 0.7em;
	font-weight: 500;
}

.archive .details {
	display: inline-block;
	width: 80%;
}

.archive .details .col {
	width: 20%;
	float: left;
	padding: 0 .5em;
}

.archive .details .desc {
	width: 60%;
}

.archive .details .col h2 {
	margin-bottom: .25em;
	font-size: 16px;
	font-family: 'High Pixel', Helvetica, Arial, sans-serif;
	color: #F5F5F5;
	text-transform: uppercase;
}

.archive .details .col:nth-child(1) h2 {
	color: #79A6CF;
}

.archive .details .col:nth-child(2) h2 {
	color: #CF7979;
}

.archive .details .col:nth-child(3) h2 {
	color: #CFC679;
}

.archive .details .col p,
.archive .details .col ul li {
	font-size: 0.8em;
	color: white;
}

.archive .details .col ul li {
	list-style: none;
}

.text-section {
	margin: 1em 0;
	padding: 1em .5em;
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	overflow: hidden;
	color: #2c2c2c;
	background-color: #f5f5f5;
}

.text-section p{
	font-size: 1.15em;
	line-height: 1.25;
	padding: .25em 1em;
}

.social {
	padding-bottom: 5px;
	overflow: hidden;
	margin: 30px 0;
}

.social .social-button-wrapper {
	width: 15%;
	float: left;
	padding-right: 10px;
	display: inline-block;
}

.social .social-button {
	display: block;
	height: 2.5em;
	font-family: 'High Pixel', Helvetica, Arial, sans-serif;
	font-size: 3em;
	text-align: center;
	text-transform: uppercase;
	text-decoration: none;
	color: white;
	padding: .25em 0;
	box-shadow: inset 0 -5px 0 rgba(25,25,25,.25), 0 5px 0 rgba(25,25,25,.25);
}

.social-button:hover {
	-webkit-transition: .1s;
	transition: .1s;
	-webkit-transform: translateY(5px);
	-ms-transform: translateY(5px);
	transform: translateY(5px);
	box-shadow: inset 0 -5px 0 rgba(25,25,25,.25);
}

.social-button:active {
	-webkit-transform: translateY(10px);
	-ms-transform: translateY(10px);
	transform: translateY(10px);
	background-position: 0 0%;
}

.social .join-us {
	padding: 0 0 0 2em;
	width: 70%;
}

.social .join-us .social-button {
	background: #79DA4C;
}

.social .facebook,
.social .twitter {
	overflow: hidden;
	text-indent: -5000px;
	background: no-repeat center;
	background-size: 80%;
}

.social .facebook {
	background-image: url('../img/facebook.png');
	background-color: #3B5998;
}

.social .twitter {
	background-image: url('../img/twitter.png');
	background-color: #4099FF;
}

/*
	footer
			*/

footer {
	width: 100%;
	background: rgb(41, 41, 41);
}

/* Media queries */

@media (min-width: 700px) and (max-width: 900px) {
	header {
		font-size: 1.25em;
	}

	.top,
	.content .q,
	.content .a,
	.social {
		font-size: .75em;
	}

	.previous .meetings {
		display: block;
	}

	.previous .meetings:nth-child(3) {
		display: none;
	}

	.previous p,
	.previous .meetings {
		width: 25%;
	}

	.archive .details {
		width: 65%;
	}

	.archive .event-name {
		width: 30%;
	}
}

@media (max-width: 699px) {
	header {
		font-size: 1em;
	}

	.text-section p{
		width: 100%;
		font-size: 1em;
	}

	.top,
	.content .q,
	.content .a,
	.social {
		font-size: .6em;
	}

	.previous .meetings {
		display: none;
	}

	.previous .meetings:nth-child(2) {
		display: block;
	}

	.previous p,
	.previous .meetings {
		width: 33%;
	}

	.archive .details {
		width: 60%;
	}

	.archive .details .col {
		width: 50%;
	}

	.archive .details .desc {
		width: 50%;
	}

	.archive .event-name {
		width: 40%;
	}
}

@media (max-width: 500px) {
	#background-images {
		display: none;
	}

	main {
		width: 100%;
	}

	header {
		font-size: .8em;
	}

	.previous .meetings:nth-child(2) {
		display: none;
	}

	.previous p {
		display: none;
	}

	.previous .more {
		display: block;
		width: 100%;
	}

	.previous p.more a {
		display: block;
		width: 50%;
		text-align: center;
		margin: 0 auto;
	}

	.archive .event-name,
	.archive .details,
	.archive .details .desc {
		width: 100%;
	}

	.archive .event-name {
		padding-bottom: .5em;
		border-bottom: 2px solid rgba(255,255,255,.05);
		text-align: center;
		margin-bottom: 1em;
	}

	.archive .details .desc {
		padding: 0 .5em 1em;
	}

	.archive .meeting {
		padding: 1em;
	}
}

